Add front-end form logic, and some back-end logic

--- a/index.html
+++ b/index.html
@@ -12,8 +12,14 @@
     <div class="container">
       <h1>Voting Information</h1>
 <!--AGE PROMPT -->
+      <form id="calculateDob">
+        <div class="form-group">
+          <label for="born">Enter date of birth</label>
+          <input id="born" class="form-control" type="date">
+        </div>
 
-
+        <button type="submit" class="btn">Enter date!</button>
+      </form>
     </div>
   </body>
 </html>
