complete backend logic

--- a/index.html
+++ b/index.html
@@ -21,5 +21,8 @@
         <button type="submit" class="btn">Enter date!</button>
       </form>
     </div>
+
+  <div id="output">
+  </div>
   </body>
 </html>
